// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Formatted Address > should not render without address 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  />
</div>
`;

exports[`Formatted Address > should render address only 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with center alignment 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 min-w-0 whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with horizontal orientation 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with horizontal orientation 2`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with normal font 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="text-base font-normal text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="transition-colors duration-200 no-ligatures"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="overflow-hidden min-w-0 text-base font-normal no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with right alignment 1`] = `
<div>
  <div
    class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with truncate on table = false 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with truncate on table = true 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <div
      class="relative text-left sm:leading-5 grow leading-[17px]"
    >
      <span
        class="overflow-hidden absolute w-full min-w-0 text-base font-semibold no-ligatures text-theme-text"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
      <span>
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with vertical orientation 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col items-start w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with vertical orientation 2`] = `
<div>
  <div
    class="flex overflow-hidden flex-col items-start w-full whitespace-nowrap"
  >
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address > should render with wallet name 1`] = `
<div>
  <div
    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
  >
    <span
      class="text-base font-semibold text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="transition-colors duration-200 no-ligatures"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="overflow-hidden min-w-0 text-base font-semibold no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;
